# aegis

./: .gitignore  .vercelignore  README.md
agent/: .env.example  .gitignore  package-lock.json  package.json  tsconfig.json
agent/src/: client.ts  inject.ts  loop.ts  main.ts  sdk.ts  software_signer.ts  x402.ts
agent/test/: client.test.ts  inject.test.ts  loop.test.ts  main.test.ts  software_signer.test.ts  x402.test.ts
dashboard/: WALLET_DEPOSIT.md  next.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
dashboard/app/: AgentChatPanel.tsx  FundAgentPanel.tsx  globals.css  layout.tsx  page.tsx
dashboard/app/api/agent/: route.test.ts  route.ts
dashboard/app/api/audit/: route.ts
dashboard/lib/: agent.test.ts  agent.ts  casper.ts  deposit.ts  ratelimit.test.ts  ratelimit.ts
dashboard/public/: proxy_caller_with_return.wasm
guarded_wallet/: .env.example  CHANGELOG.md  Cargo.toml  Odra.toml  README.md
guarded_wallet/resources/: casper-test-contracts.toml
guarded_wallet/scripts/: owner.md
guarded_wallet/src/: errors.rs  events.rs  lib.rs  policy.rs
scripts/: _common.sh  demo-1-normal.sh  demo-2-policy-block.sh  demo-3-moneyshot.sh
shared/: package.json
shared/src/: types.ts
signer/: .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
signer/spike/: pay-smoke.ts
signer/src/: audit.ts  casper.ts  deploy.ts  key.ts  main.ts  policy.ts  sdk.ts  seq.ts  server.ts
signer/test/: deploy.test.ts  key.test.ts  main.test.ts  policy.test.ts  seq.test.ts  server.test.ts
(+3 files in other folders)
