[package]
edition = "2021"
name = "guarded_wallet"
version = "0.1.0"

[dependencies]
odra = { version = "2.7.0", features = [], default-features = false }

[dev-dependencies]
odra-test = { version = "2.7.0", features = [], default-features = false }

[build-dependencies]
odra-build = { version = "2.7.0", features = [], default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = { version = "2.7.0", features = [], default-features = false }
odra-cli = { version = "2.7.0", features = [], default-features = false }

[[bin]]
name = "guarded_wallet_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "guarded_wallet_build_schema"
path = "bin/build_schema.rs"
test = false

[[bin]]
name = "guarded_wallet_cli"
path = "bin/cli.rs"
test = false

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3
